# cuda-programming-but-rust

./: .gitignore  Cargo.toml  README.md
CUDA编程指南-V13.2-zh.CN/: CUDA编程指南序.md  README.md
CUDA编程指南-V13.2-zh.CN/chapter-1-CUDA简介/: 1-CUDA简介.md  1.1-简介.md  1.2-编程模型.md  1.3-CUDA平台.md
CUDA编程指南-V13.2-zh.CN/chapter-2-CUDA GPU编程/: 2-CUDA GPU编程.md  2.1-CUDA C++入门.md  2.5-NVCC:NVIDIA CUDA编译器.md
CUDA编程指南-V13.3-zh.CN/: CUDA编程指南序.md  README.md
CUDA编程指南-V13.3-zh.CN/chapter-1-CUDA简介/: 1.1-简介.md  1.2-编程模型.md  1.3-CUDA平台.md
CUDA编程指南-V13.3-zh.CN/chapter-2-CUDA GPU编程/: 2.1-CUDA C++ 入门.md  2.2-CUDA Python 入门.md  2.3-编写 SIMT kernels.md  2.4-编写 Tile kernel.md  2.5-异步执行.md
cuda-oxide-zh.CN/: README.md  序.md
cuda-oxide-zh.CN/01-入门/: 01-安装.md  02-编写你的第一个kernel.md  安装.md  编写你的第一个kernel.md
cuda-oxide-zh.CN/02-编写GPU程序/: 01-cuda执行模型.md  02-kernel和设备函数.md  03-内存和数据移动.md  04-启动kernel.md  05-闭包和泛型.md  06-错误处理和调试.md  cuda执行模型.md  kernel和设备函数.md  内存和数据移动.md  启动kernel.md  错误处理和调试.md  闭包和泛型.md
cuda-oxide-zh.CN/03-GPU安全/: 01-安全模型.md  安全模型.md
cuda-oxide-zh.CN/04-异步GPU编程/: 01-DeviceOperation模型.md  02-组合子与组合.md  03-调度和流.md  04-并发执行.md  DeviceOperation模型.md  并发执行.md  组合子与组合.md  调度和流.md
cuda-oxide-zh.CN/05-构建一个真正的应用程序/: 01-项目-异步MLP管道.md  项目-异步MLP管道.md
cuda-oxide-zh.CN/06-高级GPU特性/: 01-共享内存与同步.md  02-warp级编程.md  03-张量内存加速器.md  04-矩阵乘法加速器.md  05-集群编程.md  共享内存与同步.md  集群编程.md
cuda-oxide-zh.CN/07-深入编译器/: 01-架构概述.md  02-pliron.md  03-rustc-public.md  04-rustc-codegen-cuda.md  05-mir-importer.md  06-pliron-dialects.md  07-lowering-pipeline.md  08-添加新内联函数.md  09-模糊测试与差异测试.md  架构概述.md  (+5 more)
src/: main.rs
(+44 files in other folders)
